# 15618-F24-Final

./: CMakeLists.txt  Milestone.md  README.md  draw.ipynb  extract.py  run.py
Cuda/: Makefile  aircraft_route.cu  flightroute.cu  flightroute.h
Data/: data_10.txt  data_5.txt  routes_small.csv  script.ipynb
Data/january/: january_data.txt  january_flights.csv  january_flights_info.txt
Inputs/: data_10.txt  data_15.txt  data_2.txt  data_3.txt  data_30.txt  data_5.txt  data_7.txt  generator.py  input_small.txt  medium.txt
MPI/: Makefile  flightroute.cpp  flightroute.h
OpenMP/: Makefile  aircraft_route.cc  flightroute.cc  flightroute.cpp  flightroute.h
Outputs/OpenMP/: openmp_10_128.txt  openmp_10_16.txt  openmp_10_2.txt  openmp_10_32.txt  openmp_10_4.txt  openmp_10_64.txt  openmp_10_8.txt  openmp_15_128.txt  openmp_15_16.txt  openmp_15_2.txt  openmp_15_32.txt  openmp_15_4.txt  openmp_15_64.txt  openmp_15_8.txt  openmp_30_128.txt  openmp_30_16.txt  openmp_30_2.txt  openmp_30_32.txt  openmp_30_4.txt  openmp_30_64.txt  openmp_30_8.txt  openmp_5_128.txt  openmp_5_16.txt  openmp_5_2.txt  openmp_5_32.txt  openmp_5_4.txt  openmp_5_64.txt  openmp_5_8.txt  openmp_7_128.txt  openmp_7_16.txt  openmp_7_2.txt  openmp_7_32.txt  openmp_7_4.txt  openmp_7_64.txt  openmp_7_8.txt  psc_openmp_2_128.txt  psc_openmp_2_16.txt  psc_openmp_2_2.txt  psc_openmp_2_32.txt  psc_openmp_2_4.txt  (+9 more)
Sequential/: Makefile  flightroute.cpp  flightroute.h
